--- a/freelancer_portfolio/project-html/project_01.html
+++ b/freelancer_portfolio/project-html/project_01.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/css.css">
-    <link rel="stylesheet" href="/font/font.css">
+    <link rel="stylesheet" href="..//css/reset.css">
+    <link rel="stylesheet" href="..//css/css.css">
+    <link rel="stylesheet" href="..//font/font.css">
     
 
     <title>Freelancer portfolio</title>
@@ -18,9 +18,9 @@
             <div class="header">
                 <div class="logotype"><span>Freelancer</span> portfolio</div>
                 <ul>
-                    <li class="active"><a style="text-decoration: none; color: white;" href="/html.html">Projects</a></li>
-                    <li><a class="link-hover" href="/skill.html">Skills</a></li>
-                    <li><a class="link-hover" style="margin-right: 0px;" href="/contacts.html">Contacts</a></li>
+                    <li class="active"><a style="text-decoration: none; color: white;" href="..//html.html">Projects</a></li>
+                    <li><a class="link-hover" href="..//skill.html">Skills</a></li>
+                    <li><a class="link-hover" style="margin-right: 0px;" href="..//contacts.html">Contacts</a></li>
                 </ul>
             </div>
 
@@ -28,12 +28,12 @@
             <div class="project-page">
                 <h1>Video service</h1>
 
-                <img class="width: 865.38px;  height: 650px;" src="/img/project-page/01.jpg" alt="">
+                <img class="width: 865.38px;  height: 650px;" src="..//img/project-page/01.jpg" alt="">
                 <div>Skills: React, Node.js, MongoDB</div>
 
 
                 <a class="git" href=""><button>
-                    <img src="/img/project-page/git.svg" alt="">
+                    <img src="..//img/project-page/git.svg" alt="">
                     <p>GitHub repo</p>
                 </button></a>
 
@@ -42,11 +42,11 @@
                 
         <div class="footer">
             <ul>
-                <li style="margin-top:9px;"><a href="#"><img src="/img/footer/vk.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/insta.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/twiter.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/git.png" alt=""></a></li>
-                <li style="margin-right: 0px;"><a href=#"><img src="/img/footer/in.png" alt=""></a></li>
+                <li style="margin-top:9px;"><a href="#"><img src="..//img/footer/vk.png" alt=""></a></li>
+                <li><a href="#"><img src="..//img/footer/insta.png" alt=""></a></li>
+                <li><a href="#"><img src="..//img/footer/twiter.png" alt=""></a></li>
+                <li><a href="#"><img src="..//img/footer/git.png" alt=""></a></li>
+                <li style="margin-right: 0px;"><a href=#"><img src="..//img/footer/in.png" alt=""></a></li>
             </ul>
             <p>© 2022 frontend-dev.com</p>
         </div>
