--- a/freelancer_portfolio/skill.html
+++ b/freelancer_portfolio/skill.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/css.css">
-    <link rel="stylesheet" href="/font/font.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/css.css">
+    <link rel="stylesheet" href="./font/font.css">
     
 
     <title>Freelancer portfolio</title>
@@ -18,9 +18,9 @@
             <div class="header">
                 <div class="logotype"><span>Freelancer</span> portfolio</div>
                 <ul>
-                    <li ><a class="link-hover"  style="text-decoration: none; color: white;" href="./html.html">Projects</a></li>
+                    <li ><a class="link-hover"  style="text-decoration: none; color: white;" href=".//html.html">Projects</a></li>
                     <li><a class="active" href="#">Skills</a></li>
-                    <li><a class="link-hover" style="margin-right: 0px;" href="./contacts.html">Contacts</a></li>
+                    <li><a class="link-hover" style="margin-right: 0px;" href=".//contacts.html">Contacts</a></li>
                 </ul>
             </div>
 
@@ -52,11 +52,11 @@
                 
         <div class="footer">
             <ul>
-                <li style="margin-top:9px;"><a href="#"><img src="/img/footer/vk.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/insta.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/twiter.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/git.png" alt=""></a></li>
-                <li style="margin-right: 0px;"><a href=#"><img src="/img/footer/in.png" alt=""></a></li>
+                <li style="margin-top:9px;"><a href="#"><img src=".//img/footer/vk.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/insta.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/twiter.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/git.png" alt=""></a></li>
+                <li style="margin-right: 0px;"><a href=#"><img src=".//img/footer/in.png" alt=""></a></li>
             </ul>
             <p>© 2022 frontend-dev.com</p>
         </div>
