--- a/freelancer_portfolio/contacts.html
+++ b/freelancer_portfolio/contacts.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/css.css">
-    <link rel="stylesheet" href="/font/font.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/css.css">
+    <link rel="stylesheet" href="./font/font.css">
     
 
     <title>Freelancer portfolio</title>
@@ -20,8 +20,8 @@
 
 
                 <ul>
-                    <li ><a class="link-hover"  style="text-decoration: none; color: white;" href="./html.html">Projects</a></li>
-                    <li><a class="link-hover" href="./skill.html">Skills</a></li>
+                    <li ><a class="link-hover"  style="text-decoration: none; color: white;" href=".//html.html">Projects</a></li>
+                    <li><a class="link-hover" href=".//skill.html">Skills</a></li>
                     <li><a class="active" style="margin-right: 0px;" href="#">Contacts</a></li>
                 </ul>
 
@@ -72,11 +72,11 @@
                 
         <div class="footer">
             <ul>
-                <li style="margin-top:9px;"><a href="#"><img src="/img/footer/vk.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/insta.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/twiter.png" alt=""></a></li>
-                <li><a href="#"><img src="/img/footer/git.png" alt=""></a></li>
-                <li style="margin-right: 0px;"><a href=#"><img src="/img/footer/in.png" alt=""></a></li>
+                <li style="margin-top:9px;"><a href="#"><img src=".//img/footer/vk.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/insta.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/twiter.png" alt=""></a></li>
+                <li><a href="#"><img src=".//img/footer/git.png" alt=""></a></li>
+                <li style="margin-right: 0px;"><a href=#"><img src=".//img/footer/in.png" alt=""></a></li>
             </ul>
             <p>© 2022 frontend-dev.com</p>
         </div>
