modification bar__site

--- a/bar__site/html.html
+++ b/bar__site/html.html
@@ -160,25 +160,25 @@
                     <div class="assortment__block">
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-1.svg" alt="">
+                                <img src="img/showcase/assortment-1.png" alt="">
                                 соки
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-2.svg" alt="">
+                                <img src="img/showcase/assortment-2.png" alt="">
                                 миксы
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-3.svg" alt="">
+                                <img src="img/showcase/assortment-3.png" alt="">
                                 смузи
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-4.svg" alt="">
+                                <img src="img/showcase/assortment-4.png" alt="">
                                 детоксы
                             </div>
                         </a>
@@ -187,25 +187,25 @@
                     <div class="assortment__block-fix-bottom assortment__block">
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-5.svg" alt="">
+                                <img src="img/showcase/assortment-5.png" alt="">
                                 ласси
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-6.svg" alt="">
+                                <img src="img/showcase/assortment-6.png" alt="">
                                 боулы
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-7.svg" alt="">
+                                <img src="img/showcase/assortment-7.png" alt="">
                                 салаты
                             </div>
                         </a>
                         <a href="">
                             <div class="assortment-box">
-                                <img src="img/showcase/assortment-8.svg" alt="">
+                                <img src="img/showcase/assortment-8.png" alt="">
                                 здоровая <br>
                                 еда
                             </div>
@@ -225,9 +225,9 @@
                 <div class="slider-2__container">
                     
                     <div class="slider-2__line">
-                        <div class="slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-1.svg" alt="">
+                        <div class="card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-1.png" alt="">
                             </div>
                             <h2 class="card-h2">ласси</h2>
                             <p class="card-p">500 мл</p>
@@ -239,9 +239,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-2.svg" alt="">
+                        <div class="card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-2.png" alt="">
 
                                 <img class="bonuses" src="img/slider-2/bonuses.svg" alt="">
 
@@ -256,9 +256,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2-margin-right-fix slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-3.svg" alt="">
+                        <div class="slider-2_with_changed-margin_rigth card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-3.png" alt="">
                             </div>
                             <h2 class="card-h2">боул</h2>
                             <p class="card-p">500 мл</p>
@@ -271,9 +271,9 @@
                         </div>
 
 
-                        <div class="slider-2-margin-left-fix slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-4.svg" alt="">
+                        <div class="slider-2_with_changed-margin_left card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-4.png" alt="">
                             </div>
                             <h2 class="card-h2">апельсиновый сок</h2>
                             <p class="card-p">500 мл</p>
@@ -285,9 +285,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-5.svg" alt="">
+                        <div class="card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-5.png" alt="">
                             </div>
                             <h2 class="card-h2">грин</h2>
                             <p class="card-p">500 мл</p>
@@ -299,9 +299,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2-margin-right-fix slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-6.svg" alt="">
+                        <div class="slider-2_with_changed-margin_rigth card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-6.png" alt="">
                                 <img class="bonuses" src="img/slider-2/bonuses.svg" alt="">
                             </div>
                             <h2 class="card-h2">гранатовый сок</h2>
@@ -314,9 +314,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2-margin-left-fix slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-7.svg" alt="">
+                        <div class="slider-2_with_changed-margin_left card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-7.png" alt="">
                             </div>
                             <h2 class="card-h2">доктор</h2>
                             <p class="card-p">500 мл</p>
@@ -328,9 +328,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-8.svg" alt="">
+                        <div class="card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-8.png" alt="">
                                 <img class="bonuses" src="img/slider-2/bonuses.svg" alt="">
                             </div>
                             <h2 class="card-h2">смузи</h2>
@@ -343,9 +343,9 @@
                             </button>
                         </div>
 
-                        <div class="slider-2-margin-right-fix slider-2__card">
-                            <div class="card__box-img">
-                                <img class="card__box-img-img" src="img/slider-2/card-9.svg" alt="">
+                        <div class="slider-2_with_changed-margin_rigth card__product">
+                            <div class="product__box-picture">
+                                <img src="img/slider-2/card-9.png" alt="">
                                 <img class="bonuses" src="img/slider-2/bonuses.svg" alt="">
                             </div>
                             <h2 class="card-h2">детокс</h2>
@@ -360,7 +360,7 @@
                     </div>
                     
                 </div>
-                <button class=" slider-2__prev"></button>
+                <button class="slider-2__prev"></button>
                 <button class="slider-2__next-active  slider-2__next"></button>
                 <img src="img/slider/slider__line.png" alt="" class="showcase-top-line slider-border-top-line">
                 <img src="img/slider/slider__line.png" alt="" class="slider-2-bottom-line slider-border-bottom-line">
@@ -428,7 +428,7 @@
                 </div>
                 <div class="shiping__container-2">
                     <img class="phrase" src="img/shipping/phrase.svg" alt="">
-                    <img class="man" src="img/shipping/man.svg" alt="">
+                    <img class="man" src="img/shipping/man.png" alt="">
                 </div>
                 <img src="img/slider/slider__line.png" alt="" class="slider-border-top-line">
                 <img src="img/slider/slider__line.png" alt="" class="shipping__line-bottom slider-border-bottom-line">
@@ -478,9 +478,11 @@
             </div>
             <div class="footer">
                 <h2>присоединяйтесь к vita juice</h2>
+              <div class="footer__social">
                 <a  href="#"><div class="vk"></div></a>
                 <a  href="#"><div class="instagram"></div></a>
                 <a href="#"> <div class="facebook" ></div></a>
+              </div>
             </div>
         </main>
 
